# opengl_docker

./: CMakeLists.txt  Dockerfile  LICENSE
config/: basic  entrypoint.sh
src/: main.cpp  shader.hpp
